--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+albucore==0.0.20
+albumentations==1.4.21
+annotated-types==0.7.0
 colorcet==3.1.0
 contourpy==1.3.1
 cycler==0.12.1
+eval_type_backport==0.2.0
 filelock==3.16.1
 fonttools==4.55.0
 fsspec==2024.10.0
@@ -14,16 +18,22 @@ mpmath==1.3.0
 networkx==3.4.2
 numpy==2.1.3
 opencv-contrib-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
 pycocotools==2.0.8
+pydantic==2.10.1
+pydantic_core==2.27.1
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyYAML==6.0.2
 scikit-image==0.24.0
 scipy==1.14.1
+simsimd==6.1.1
 six==1.16.0
+stringzilla==3.10.10
 sympy==1.13.1
 tifffile==2024.9.20
 torch==2.5.1
